tolk-tester/tests/invalid-declaration/err-1039.tolk

enum Color { Red = Color.Red }

/**
@compilation_should_fail
@stderr enum `Color` initializers circularly references itself
 */
